# qml-video-rs

./: Cargo.toml  LICENSE  README.md  build.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.qml  main.rs
src/: lib.rs  video_item.rs  video_player.rs
src/cpp/: MDKPlayer.cpp  MDKPlayer.h  VideoTextureNode.cpp  VideoTextureNode.h
