[package]
name = "qml-video-rs"
version = "0.1.0"
authors = ["Adrian <adrian.eddy@gmail.com>"]
edition = "2021"
build = "build.rs"

[dependencies]
qmetaobject = { version = "*", git = "https://github.com/woboq/qmetaobject-rs.git", default-features = false, features = ["log"] }
qttypes     = { version = "*", git = "https://github.com/woboq/qmetaobject-rs.git", default-features = false, features = ["required", "qtquick", "qtquickcontrols2"]}
cstr = "0.2"
cpp = "0.5"

[build-dependencies]
cpp_build = "0.5"
reqwest = { version = "0.11", features = ["blocking"] }
